--- a/app/telstra-caller/app.json
+++ b/app/telstra-caller/app.json
@@ -4,7 +4,7 @@
     "slug": "telstra-caller",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/coachsilence.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -14,8 +14,6 @@
     },
     "android": {
       "permissions": [
-        "android.permission.CALL_PHONE",
-        "android.permission.MANAGE_OWN_CALLS",
         "android.permission.ACCESS_COARSE_LOCATION",
         "android.permission.ACCESS_FINE_LOCATION",
         "android.permission.FOREGROUND_SERVICE",
@@ -24,6 +22,11 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
+      },
+      "config": {
+        "googleMaps": {
+          "apiKey": "YOUR-API-KEY"
+        }
       },
       "package": "com.anonymous.telstracaller"
     },
@@ -37,16 +40,15 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
+          "backgroundColor": "#232323",
+          "image": "./assets/images/coachsilence.png",
+          "imageWidth": 200
         }
       ],
       [
         "expo-location",
         {
-          "isAndroidForegroundServiceEnabled": "Allow $(PRODUCT_NAME) to use your location."
+          "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
         }
       ]
     ],
