--- a/app/telstra-caller/app.json
+++ b/app/telstra-caller/app.json
@@ -25,7 +25,7 @@
       },
       "config": {
         "googleMaps": {
-          "apiKey": "YOUR-API-KEY"
+          "apiKey": "AIzaSyDNbbxkc-lI95NVDCYn2CmM2bZzBICD9cQ"
         }
       },
       "package": "com.anonymous.telstracaller"
